external-crates/move/crates/move-compiler/tests/move_2024/migration/public_friend.move
module a::m {

    public( friend ) fun t0() {}
    public(friend) fun t1() {}
    /*stays*/public(/*deleted*/friend/*deleted*/)/*stays*/fun t2() {}

}
